# mcp-server-boilerplate

./: INSPECTOR.md  LICENSE  README.md
mcp-server/: .dockerignore  .env.example  README.md  dockerfile  main.py  pyproject.toml  setup.py
mcp-server/mcp_server/: config.yaml  example_mcp_server.py  mcp_server.py
mcp-server/mcp_server/data_models/: base.py  config.py  example.py
mcp-server/mcp_server/utils/: config.py  logger.py  request_wrapper.py
