[project]
name = "mcp-server-boilerplate"
version = "0.1.0"
description = "A simple and generic boilerplate for building Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs>=15.0.1",
    "envyaml>=1.10.211231",
    "fastmcp>=2.11.3",
    "pyhumps>=3.8.0",
    "requests>=2.32.5",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
